--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,14 @@ label {
 	border-color: #007bff;
 }
 
+.btn-secondary {
+	background-color: #ff0000;
+	border-color: #ff0000;
+}
+
 .btn-primary:hover {
-	background-color: #0069d9;
-	border-color: #0062cc;
+	background-color: #00d998;
+	border-color: #00d998;
 }
 
 .response {
@@ -35,3 +40,53 @@ label {
 	border-radius: .25rem;
 	background-color: rgb(255, 0, 0);
 }
+
+p {
+	font-size: 16px;
+	font-family: Arial, sans-serif;
+	line-height: 1.5;
+	margin: 1em 0;
+	color: #ffffff;
+  }
+  p5 {
+	font-size: 10px;
+	font-family: Arial, sans-serif;
+	line-height: 1.5;
+	margin: 1em 0;
+	color: #ffffff;
+  }  
+
+  h1 {
+	font-size: 25px;
+	font-weight: bold;
+	font-style: italic;
+	color: #ffffff;
+	margin-bottom: 1rem;
+  }
+  footer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 50px;
+	background-color: #000000;
+	font-size: 5px;
+	color: #ffffff;
+	margin-top: 50px;
+  }
+  
+  footer p {
+	margin: 0;
+  }
+  
+  footer a {
+	color: #c01a1a;
+	text-decoration: none;
+	font-weight: bold;
+  }
+  
+  footer a:hover {
+	text-decoration: underline;
+  }
+  
+  
+  
